--- a/5. arrays and objects/methods_array.html
+++ b/5. arrays and objects/methods_array.html
@@ -38,7 +38,7 @@
 
 // Methods Of array push - pop - shift - unshift
         let nums = [2, 4, 6];
-        console.log(nums);
+        //console.log(nums);
 
         // push is used to insert element at the end of array
         // nums.push(8);
@@ -46,12 +46,29 @@
 
     // pop  is used to remove last element from end of array
          nums.pop();
-         console.log(nums);
+         //console.log(nums);
 
     // shift() is used to remove from start of array
 
     // unshift() is used to add in start
 
+
+ // prompts
+        let num = prompt("Write a number");
+        //console.log(typeof num)
+
+        // convert type to number
+        let n = Number(num);
+        //console.log(typeof n);
+
+        const ar = [1, 2, 3, 4, 5];
+
+        for(let i = 0; i < ar.length; i++) {
+            console.log ( ar[i] * n )
+        }
+
+
+ 
     </script>
 </body>
 </html>
